Search within categories: Prevent category styles from leaking into search template
When searching inside a category, e.g. `/category/events/?s=wcus`, the CSS for the category would apply, even though the search template was the active template. This caused awkward layout issues, as the markup didn't match the CSS expectations. The simple fix for this is to remove the category-related classes from the `body`, so that the CSS no longer leaks through.

Additionally, this fixes a few other issues where search and category conditionals are both true, causing duplicated headings.

Props tjnowell
See https://wordpress.slack.com/archives/C04U953K77A/p1717600891707869

--- a/source/wp-content/themes/wporg-news-2021/sass/components/_query-title-banner.scss
+++ b/source/wp-content/themes/wporg-news-2021/sass/components/_query-title-banner.scss
@@ -38,7 +38,7 @@
 }
 
 // Show the relevant banner based on the body class.
-body.archive .query-title-banner__query-title,
+body.archive:not(.search) .query-title-banner__query-title,
 body.news-posts-index .query-title-banner__all-posts,
 body.search .query-title-banner__search-results {
 	display: block;
